--- a/style.css
+++ b/style.css
@@ -1,3 +1,36 @@
- body {
+@import url('https://fonts.googleapis.com/css?family=Maven+Pro');
+ 
+ html, body {
  	text-align: center;
+ 	margin: 0 auto;
+ 	padding: 0;
+ 	height: 100%;
+ 	width: 100%;
+ 	font-family: 'Maven Pro', sans-serif;
+}
+ header {
+ 	background-color: #222;
+ 	color: #ddd;
+ 	height: 135px;
+ 	display: flex;
+ 	justify-content: center;
+ 	align-items: center;
+	-webkit-box-shadow: 0px 3px 5px rgba(100, 100, 100, 0.49);
+	-moz-box-shadow:    0px 3px 5px rgba(100, 100, 100, 0.49);
+	box-shadow:         0px 3px 5px rgba(100, 100, 100, 0.49);
+
+ }
+ h1 {
+ 	margin: 0;
+ 	padding: 0;
+ 	text-transform: uppercase;
+ 	text-shadow:  1px 1px 10px #000;
+ 	font-size: 35px;
+ }
+ input {
+ 	margin: 60px 10px 40px;
+ }
+ #user-choice, #computer-choice, #winner {
+ 	font-weight: bold;
+ 	font-style: italic;
  }
