--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@
 }
  header {
  	background-color: #222;
- 	color: #ddd;
+  	color: #ddd;
  	height: 135px;
  	display: flex;
  	justify-content: center;
@@ -75,6 +75,6 @@
   		width: 70%;
   	}
   	header {
-  		height: 24%;
+  		height: 160px;
   	}
 }
