--- a/style.css
+++ b/style.css
@@ -69,6 +69,9 @@
  	font-weight: bold;
  	font-style: italic;
  }
+ .results {
+ 	padding-bottom: 35px;
+ }
 
 @media (max-width: 576px) {
 	h1, input {
