--- a/style.css
+++ b/style.css
@@ -10,6 +10,10 @@
  	font-size: 1.1em;
  	background-color: #eee;
 }
+*:focus { 
+	outline: transparent !important; 
+	box-shadow: none !important;
+}
  header {
  	background-color: #222;
   	color: #ddd;
